client/src/index.css
:root {
  --root-font-size: 12px;
  --font-primary: monospace;

  --color-bg: #111;
  --color-bg-light: #222;
  --color-bg-lighter: #333;
  --color-bg-lightest: #444;

  --color-text: #ddd;
  --color-text-dark: #888;

  --color-mfer-blue: #5dd3ff;
  --color-mfer-green: #cafe80;
  --color-mfer-orange: #ffb470;
  --color-mfer-red: #ff7077;
  --color-mfer-yellow: #ffe260;

  --color-input-bg: var(--color-bg-light);
  --color-input-border: var(--color-bg-lightest);
  --color-input-placeholder: var(--color-text-dark);
  --color-button-bg: var(--color-bg-light);
  --color-button-border: var(--color-bg-lightest);
  --color-button-hover: var(--color-bg-lighter);

  --padding-ui: 0.1rem 0.5rem;
  --padding-table: 0.25rem 0.5rem;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  font-size: var(--root-font-size) !important;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--font-primary);
  color: var(--color-text);
  background-color: var(--color-bg);
}

button {
  cursor: pointer;
  font-family: var(--font-primary);
  font-size: 1rem;
  background-color: var(--color-button-bg);
  color: var(--color-text);
  border: 1px solid var(--color-button-border);
  margin: 0;
  padding: var(--padding-ui);
}

button:hover {
  background-color: var(--color-button-hover);
}

input {
  font-family: var(--font-primary);
  font-size: 1rem;
  background-color: var(--color-input-bg);
  color: var(--color-text);
  border: 1px solid var(--color-input-border);
  margin: 0;
  padding: var(--padding-ui);
}

input::placeholder {
  color: var(--color-input-placeholder);
  opacity: 1;
}

input:focus {
  outline: none;
  border-color: var(--color-button-hover);
}

table {
  width: 100%;
  border-collapse: collapse;
}

th,
td {
  text-align: left;
  outline: 1px solid var(--color-bg-light);
  padding: var(--padding-table);
}

th {
  font-weight: bold;
}

pre {
  font-size: 1rem;
}

.outline-dark {
  outline: 1px solid var(--color-bg);
}

.outline-light {
  outline: 1px solid var(--color-bg-light);
}

.outline-lighter {
  outline: 1px solid var(--color-bg-lighter);
}

.outline-lightest {
  outline: 1px solid var(--color-bg-lightest);
}

.outline-blue {
  outline: 1px solid var(--color-mfer-blue);
}

.outline-green {
  outline: 1px solid var(--color-mfer-green);
}

.outline-orange {
  outline: 1px solid var(--color-mfer-orange);
}

.outline-red {
  outline: 1px solid var(--color-mfer-red);
}

.outline-yellow {
  outline: 1px solid var(--color-mfer-yellow);
}

